# CTinspector

./: CMakeLists.txt  CTinspector.spec.in  README.en.md  README.md  how-to.txt
ebpf_example/: Makefile  clone.c  function_call.c  migrate.c  mmap.c  monitor_address.c
ebpf_vm_executor/: CMakeLists.txt  ebpf_vm_elf.c  ebpf_vm_functions.c  ebpf_vm_functions.h  ebpf_vm_simulator.c  ebpf_vm_simulator.h  ebpf_vm_transport.h  ebpf_vm_transport_rdma.c  ebpf_vm_transport_rdma.h  list.h  ub_list.h
ebpf_vm_test/: CMakeLists.txt  mp_vm_test.c  mp_vm_test.h  test_monitor_address.c
